--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^1.0.6
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.1.1
   firebase_core: ^1.0.4
