--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.1.1
   firebase_core: ^1.0.4
+  random_string: ^2.1.0
 
 dev_dependencies:
   flutter_test:
