--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   firebase_core: ^1.0.4
   random_string: ^2.1.0
 
+  image_picker: ^0.7.2+1
+  image_cropper: ^1.4.0
+  photo_view: ^0.11.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
