--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.1.1
   firebase_core: ^1.0.4
-  random_string: ^2.1.0
-
-  image_picker: ^0.7.2+1
   image_cropper: ^1.4.0
+  image_picker: ^0.7.2+1
   photo_view: ^0.11.1
+  random_string: ^2.1.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
