--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,14 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^1.0.6
   cupertino_icons: ^1.0.2
+  emoji_picker: ^0.1.0
   firebase_auth: ^1.1.1
   firebase_core: ^1.0.4
   image_cropper: ^1.4.0
   image_picker: ^0.7.2+1
   photo_view: ^0.11.1
   random_string: ^2.1.0
-  shared_preferences: ^2.0.5
+  shared_preferences: ^0.5.4+1
 
 dev_dependencies:
   flutter_test:
